<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_white"
    android:orientation="vertical">

    <!--个人信息-->
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:toolbar="http://schemas.android.com/apk/res-auto"
        toolbar:theme="@style/Theme.ToolBar.Base"
        android:background="@color/bg_blue_deep"

        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <!--头像-->
        <LinearLayout
            android:id="@+id/userInfo_ll_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userinfo_icon_hint"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userInfo_civ_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/test_icon" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_info_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
        <!--用户名-->
        <LinearLayout
            android:id="@+id/userInfo_ll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userinfo_name_hint"
                android:textColor="@color/textBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userInfo_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_name_none"
                android:textColor="@color/textGray"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_info_next"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
        <!--性别-->
        <LinearLayout
            android:id="@+id/userInfo_ll_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userinfo_sex_hint"
                android:textColor="@color/textBlack"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/userInfo_radioGroup_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/userInfo_radio_sexMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userinfo_sex_hint_man"
                    android:textColor="@color/textGray" />

                <RadioButton
                    android:id="@+id/userInfo_radio_sexWomen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/userinfo_sex_hint_women"
                    android:textColor="@color/textGray" />

            </RadioGroup>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginLeft="5dp"

                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
        <!--年龄-->
        <LinearLayout
            android:id="@+id/userInfo_ll_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userinfo_birthday_hint"
                android:textColor="@color/textBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userInfo_tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_age_none"
                android:textColor="@color/textBlueDeep"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_info_next"
                android:id="@+id/imageView2" />
        </LinearLayout>


    </LinearLayout>

    <!--账号绑定-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <!--提示-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userinfo_account_hint"
                android:textColor="@color/textGray"
                android:textSize="14sp" />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
        <!--手机号-->

        <LinearLayout
            android:id="@+id/userInfo_ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userinfo_phone_hint"
                android:textColor="@color/textBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userInfo_tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_phone_none"
                android:textColor="@color/textBlueDeep"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_info_next" />

        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
        <!--邮箱-->
        <LinearLayout
            android:id="@+id/userInfo_ll_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userinfo_email_hint"
                android:textColor="@color/textBlack"
                android:textSize="16sp"
                android:id="@+id/textView" />

            <TextView
                android:id="@+id/userInfo_tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_email_none"
                android:textColor="@color/textBlueDeep"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_info_next" />

        </LinearLayout>


    </LinearLayout>

    <!--安全设置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <!--提示-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userinfo_security_hint"
                android:textColor="@color/textGray"
                android:textSize="14sp" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
        <!--密码-->
        <LinearLayout
            android:id="@+id/userInfo_ll_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userinfo_pwd_hint"
                android:textColor="@color/textBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userInfo_tv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_pwd_change"
                android:textColor="@color/textBlueDeep"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_info_next" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
