<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/bg_gray_white"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        xmlns:toolbar="http://schemas.android.com/apk/res-auto"
        toolbar:theme="@style/Theme.ToolBar.Base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_blue_deep"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_civ_head"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_login"
        app:civ_border_color="#00000000"
        app:civ_border_width="0dp" />

    <!-- 登录用户名框 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/login_account"
                android:textColor="@color/textBlack" />

            <!--
            <AutoCompleteTextView
                android:id="@+id/login_username"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="用户名/注册邮箱"
                android:padding="0dp"
                android:singleLine="true"
                android:textSize="14sp" />
                /> -->
            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:hint="@string/login_account_hint"
                android:maxLines="1"
                android:padding="0dp"
                android:textSize="14sp" />
        </LinearLayout>
        <!-- 隔离付符号 -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

    </LinearLayout>

    <!-- 登录用密码框 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/login_pwd"
                android:textColor="@color/textBlack" />

            <EditText
                android:id="@+id/login_et_usepass"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="0dp"
                android:textSize="14sp" />

            <!-- 忘记密码 -->

            <TextView
                android:id="@+id/login_tv_forgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_forgetpwd"
                android:textColor="@color/textBlue" />


        </LinearLayout>
        <!-- 隔离付符号 -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
    </LinearLayout>


    <!-- 登录按钮和注册按钮 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_radius_blue_bg"
            android:text="@string/login_login"
            android:textColor="#fff" />

        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_radius_blue_bg"
            android:text="@string/login_register"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="点击登录即代表您已阅读并同意"
            android:textColor="@color/textBlack"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《免责声明》"
            android:textColor="@color/textBlueDeep"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>
